--- a/public/src/app/pages/users/users.component.html
+++ b/public/src/app/pages/users/users.component.html
@@ -1,13 +1,109 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper. Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam luctus leo augue, non facilisis nunc aliquam sed. Aliquam erat volutpat. Nam laoreet cursus nunc, id tincidunt justo. Nullam elit magna, finibus at aliquam ut, blandit vel magna. Phasellus ullamcorper urna a leo luctus vestibulum. Duis posuere leo ac lectus auctor, convallis aliquam odio gravida.</p>
-				<p>Sed porttitor turpis quis est pellentesque, in accumsan risus porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas quis elit sed felis dapibus sodales ut auctor nibh. Mauris dapibus diam in ante scelerisque ultrices. Nam tincidunt lorem vel ultricies sodales. Nullam facilisis placerat pulvinar. Nullam in arcu urna. Pellentesque tempus lorem et ligula viverra convallis. Integer id vehicula quam, sit amet dictum urna. Praesent pellentesque hendrerit risus non pharetra. In a libero finibus, hendrerit justo quis, consequat nunc. Sed iaculis efficitur nunc sagittis hendrerit. Praesent ligula augue, malesuada quis pretium semper, facilisis non quam. Phasellus ac placerat mi. Quisque ac fermentum tellus.</p>
-				<p>Duis facilisis aliquet neque, nec dignissim dolor venenatis non. Donec quis consectetur nibh. Ut ut purus in metus pellentesque feugiat non ut augue. Aenean at leo vulputate, viverra ligula ut, aliquam turpis. Cras nunc dui, sollicitudin quis lorem sit amet, auctor mollis libero. Integer non magna ipsum. Etiam ullamcorper urna tortor, nec tempor tortor elementum et. Donec placerat mi nisi, id rhoncus lacus sodales sed. Nullam lorem risus, sollicitudin non lacinia a, scelerisque et mauris. Vivamus nisi enim, egestas ac ante eu, molestie vestibulum felis. Praesent vitae dui tincidunt mi malesuada pharetra. Integer vehicula leo at laoreet tempor. In vestibulum rutrum tellus, eget suscipit orci egestas et. Vestibulum tincidunt aliquam dui, ac pharetra eros commodo ut. Sed tempus eget orci a laoreet. Donec gravida imperdiet congue.</p>
-				<p>Proin at iaculis velit, et finibus lorem. Aenean ac enim pretium, hendrerit nunc in, tincidunt mauris. Suspendisse congue ipsum nec libero sagittis pretium. Quisque vulputate sem est, in laoreet orci sagittis sed. Vestibulum in lectus eleifend, lacinia lectus in, maximus tortor. Mauris quis posuere arcu, nec hendrerit mauris. In pulvinar sodales rhoncus. In hac habitasse platea dictumst. Ut tempor mattis ligula sed dapibus.</p>
-				<p>Sed vel condimentum elit. Donec varius ex eget vestibulum egestas. Cras sed cursus massa, eget feugiat sapien. Cras maximus lectus mi, a rhoncus libero gravida quis. Fusce luctus malesuada elementum. Integer nec lectus convallis, ullamcorper orci eu, bibendum nisl. Cras hendrerit mi fringilla ante egestas pharetra. Ut sollicitudin suscipit turpis, eleifend pharetra nisl mollis sit amet. Nulla mauris elit, venenatis luctus dictum sit amet, aliquet nec leo. Fusce sed sapien libero. In lacus dui, porttitor tempus ullamcorper ac, laoreet id massa. Nulla facilisi.</p>
-				<p>Proin at iaculis velit, et finibus lorem. Aenean ac enim pretium, hendrerit nunc in, tincidunt mauris. Suspendisse congue ipsum nec libero sagittis pretium. Quisque vulputate sem est, in laoreet orci sagittis sed. Vestibulum in lectus eleifend, lacinia lectus in, maximus tortor. Mauris quis posuere arcu, nec hendrerit mauris. In pulvinar sodales rhoncus. In hac habitasse platea dictumst. Ut tempor mattis ligula sed dapibus.</p>
-				<p>Sed vel condimentum elit. Donec varius ex eget vestibulum egestas. Cras sed cursus massa, eget feugiat sapien. Cras maximus lectus mi, a rhoncus libero gravida quis. Fusce luctus malesuada elementum. Integer nec lectus convallis, ullamcorper orci eu, bibendum nisl. Cras hendrerit mi fringilla ante egestas pharetra. Ut sollicitudin suscipit turpis, eleifend pharetra nisl mollis sit amet. Nulla mauris elit, venenatis luctus dictum sit amet, aliquet nec leo. Fusce sed sapien libero. In lacus dui, porttitor tempus ullamcorper ac, laoreet id massa. Nulla facilisi.</p>
-				<p>Proin at iaculis velit, et finibus lorem. Aenean ac enim pretium, hendrerit nunc in, tincidunt mauris. Suspendisse congue ipsum nec libero sagittis pretium. Quisque vulputate sem est, in laoreet orci sagittis sed. Vestibulum in lectus eleifend, lacinia lectus in, maximus tortor. Mauris quis posuere arcu, nec hendrerit mauris. In pulvinar sodales rhoncus. In hac habitasse platea dictumst. Ut tempor mattis ligula sed dapibus.</p>
-				<p>Sed vel condimentum elit. Donec varius ex eget vestibulum egestas. Cras sed cursus massa, eget feugiat sapien. Cras maximus lectus mi, a rhoncus libero gravida quis. Fusce luctus malesuada elementum. Integer nec lectus convallis, ullamcorper orci eu, bibendum nisl. Cras hendrerit mi fringilla ante egestas pharetra. Ut sollicitudin suscipit turpis, eleifend pharetra nisl mollis sit amet. Nulla mauris elit, venenatis luctus dictum sit amet, aliquet nec leo. Fusce sed sapien libero. In lacus dui, porttitor tempus ullamcorper ac, laoreet id massa. Nulla facilisi.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper. Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam luctus leo augue, non facilisis nunc aliquam sed. Aliquam erat volutpat. Nam laoreet cursus nunc, id tincidunt justo. Nullam elit magna, finibus at aliquam ut, blandit vel magna. Phasellus ullamcorper urna a leo luctus vestibulum. Duis posuere leo ac lectus auctor, convallis aliquam odio gravida.</p>
-				<p>Sed porttitor turpis quis est pellentesque, in accumsan risus porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas quis elit sed felis dapibus sodales ut auctor nibh. Mauris dapibus diam in ante scelerisque ultrices. Nam tincidunt lorem vel ultricies sodales. Nullam facilisis placerat pulvinar. Nullam in arcu urna. Pellentesque tempus lorem et ligula viverra convallis. Integer id vehicula quam, sit amet dictum urna. Praesent pellentesque hendrerit risus non pharetra. In a libero finibus, hendrerit justo quis, consequat nunc. Sed iaculis efficitur nunc sagittis hendrerit. Praesent ligula augue, malesuada quis pretium semper, facilisis non quam. Phasellus ac placerat mi. Quisque ac fermentum tellus.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quam massa, ornare at turpis quis, varius pulvinar lorem. Morbi eleifend nisi eget viverra fermentum. Vivamus interdum dui quis orci placerat semper. Morbi lobortis ex sit amet risus cursus pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam luctus leo augue, non facilisis nunc aliquam sed. Aliquam erat volutpat. Nam laoreet cursus nunc, id tincidunt justo. Nullam elit magna, finibus at aliquam ut, blandit vel magna. Phasellus ullamcorper urna a leo luctus vestibulum. Duis posuere leo ac lectus auctor, convallis aliquam odio gravida.</p>
-				<p>Sed porttitor turpis quis est pellentesque, in accumsan risus porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas quis elit sed felis dapibus sodales ut auctor nibh. Mauris dapibus diam in ante scelerisque ultrices. Nam tincidunt lorem vel ultricies sodales. Nullam facilisis placerat pulvinar. Nullam in arcu urna. Pellentesque tempus lorem et ligula viverra convallis. Integer id vehicula quam, sit amet dictum urna. Praesent pellentesque hendrerit risus non pharetra. In a libero finibus, hendrerit justo quis, consequat nunc. Sed iaculis efficitur nunc sagittis hendrerit. Praesent ligula augue, malesuada quis pretium semper, facilisis non quam. Phasellus ac placerat mi. Quisque ac fermentum tellus.</p>
+<div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
+  <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
+    <div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 175px;">
+      <div style="padding: 50px 50px 0px 50px; font-size: 44px; color: white;">Users</div>
+      <div style="padding: 0px 50px 50px 50px; font-size: 16px; font-weight: lighter; color: white;">Get Twitch user data</div>
+    </div>
+    <div class="container">
+      <br />
+      <ngb-tabset justify="justified">
+        <ngb-tab mat-button title="Get user by user ID">
+          <ng-template ngbTabContent>
+            <!-- Card  -->
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <!-- Input group -->
+                <div class="input-group">
+                  <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value="116069219"
+                    (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
+                  <div class="input-group-append">
+                    <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
+                  </div>
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-md-8">
+                  <h6 class="my-0">Display Name</h6>
+                  <a target="_blank" href="https://www.twitch.tv">
+                    <small class="userInfo">{{user.display_name}}</small>
+                  </a>
+                  <hr>
+                  <h6 class="my-0">Broadcaster Type</h6>
+                  <small class="userInfo">{{user.broadcaster_type}}</small>
+                  <hr>
+                  <h6 class="my-0">Description</h6>
+                  <small class="userInfo">{{user.description}}</small>
+                  <hr>
+                  <h6 class="my-0">User ID</h6>
+                  <small class="userInfo">{{user.id}}</small>
+                  <hr>
+                  <h6 class="my-0">User Type</h6>
+                  <small class="userInfo">{{user.type}}</small>
+                  <hr>
+                  <h6 class="my-0">View Count</h6>
+                  <small class="userInfo">{{user.view_count}}</small>
+                </div>
+                <div class="col-md-4">
+                  <h6 class="my-0">Profile Image</h6>
+                  <img class="thumbnail" src="{{user.profile_image_url}}">
+                  <hr>
+                  <h6 class="my-0">Offline Image</h6>
+                  <img class="thumbnail" src="{{user.offline_image_url}}">
+                </div>
+              </div>
+            </div>
+          </ng-template>
+        </ngb-tab>
+        <ngb-tab title="Get user by user login">
+          <ng-template ngbTabContent>
+            <!-- Card  -->
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <!-- Input group -->
+                <div class="input-group">
+                  <input type="text" class="form-control" autocomplete="off" placeholder="USER LOGIN" id="providedUserLogin" #providedUserLogin
+                    value="nizos" (keyup.enter)="onEnter(providedUserLogin.value)" (keyup.enter)="getUserByLogin(userLogin)">
+                  <div class="input-group-append">
+                    <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserLogin.value)" (click)="getUserByLogin(userLogin)">Get user</button>
+                  </div>
+                </div>
+              </div>
+              <br />
+              <div class="row">
+                <div class="col-md-8">
+                  <h6 class="my-0">Display Name</h6>
+                  <a target="_blank" href="https://www.twitch.tv">
+                    <small class="userInfo">{{user.display_name}}</small>
+                  </a>
+                  <hr>
+                  <h6 class="my-0">Broadcaster Type</h6>
+                  <small class="userInfo">{{user.broadcaster_type}}</small>
+                  <hr>
+                  <h6 class="my-0">Description</h6>
+                  <small class="userInfo">{{user.description}}</small>
+                  <hr>
+                  <h6 class="my-0">User ID</h6>
+                  <small class="userInfo">{{user.id}}</small>
+                  <hr>
+                  <h6 class="my-0">User Type</h6>
+                  <small class="userInfo">{{user.type}}</small>
+                  <hr>
+                  <h6 class="my-0">View Count</h6>
+                  <small class="userInfo">{{user.view_count}}</small>
+                </div>
+                <div class="col-md-4">
+                  <h6 class="my-0">Profile Image</h6>
+                  <img class="thumbnail" src="{{user.profile_image_url}}">
+                  <hr>
+                  <h6 class="my-0">Offline Image</h6>
+                  <img class="thumbnail" src="{{user.offline_image_url}}">
+                </div>
+              </div>
+            </div>
+          </ng-template>
+        </ngb-tab>
+      </ngb-tabset>
+    </div>
+  </div>
+</div>
