Fixed page content width

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -9,7 +9,7 @@
   <!-- Page Content Holder -->
   <div id="page-column" class="column">
     <div class="page-header">Page Header</div>
-    <div class="page-body" id="flex-container">
+    <div class="page-body">
       <router-outlet></router-outlet>
     </div>
   </div>
