Fixed login success path

--- a/public/src/app/pages/signin/signin.component.html
+++ b/public/src/app/pages/signin/signin.component.html
@@ -15,7 +15,7 @@
                                     <h2 class="text-center">Login Now</h2>
                                     <form class="login-form">
 
-                                            <a class="twitch-button-link" href="/auth/twitch"><button type="button" class="btn twitch-button btn-block" href="/auth/twitch"><img class="pull-left" src="'../../assets/images/Twitch/GlitchIcon_White_24px.png"><a>Connect with Twitch</a></button></a>
+                                            <a class="twitch-button-link" href="http://localhost:3000/auth/twitch"><button type="button" class="btn twitch-button btn-block" href="http://localhost:3000/auth/twitch"><img class="pull-left" src="'../../assets/images/Twitch/GlitchIcon_White_24px.png"><a>Connect with Twitch</a></button></a>
 
                                     </form>
                                     <div class="copy-text">Created by
