Signed in/out state shows/hides sign in/out button

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <!-- Page Content Holder -->
   <div id="page-column" class="column">
-    <div class="page-header">Page Header</div>
+    <div class="page-header">Streamer Dashboard</div>
     <div class="page-body">
       <router-outlet></router-outlet>
     </div>
