--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,6 @@
-
 <div id="page-container">
+
+  <!-- Sidebar Holder -->
   <div id="sidebar-column" class="column">
       <div class="sidebar-body">
         <app-sidebar></app-sidebar>
@@ -11,8 +12,14 @@
     <div class="page-header">Streamer Dashboard</div>
     <div class="page-body">
       <router-outlet></router-outlet>
+      <!-- Footer Holder -->
+      <div>
+        <app-footer></app-footer>
+      </div>
     </div>
   </div>
+
+
 
 
   <canvas class="background"></canvas>
