--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -2,7 +2,7 @@
  * @Author: Nizars
  * @Date: 2018-06-02 22:34:02
  * @Last Modified by: Nizars
- * @Last Modified time: 2018-06-02 22:34:02
+ * @Last Modified time: 2018-06-09 08:45:13
  */
 
 
@@ -62,6 +62,7 @@
   flex-grow: 1;
   overflow-y: auto;
   transition: all 0.3s;
+  background-color: #343A40;
   // overflow: hidden;
 }
 
