--- a/client/src/app/ui/sidebar/sidebar.component.html
+++ b/client/src/app/ui/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     <ul class="list-unstyled components">
       <li class="expanded">
         <div class="container sidebar-button-container">
-          <button mat-button class="sidebar-button sidebar-toggle-button" id="sidebar-collapse" placement="right" ngbTooltip="Toggle side bar">
+          <button mat-button class="sidebar-button sidebar-toggle-button btn btn-primary" id="sidebar-collapse" placement="right" ngbTooltip="Toggle side bar">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">menu</i>
@@ -18,7 +18,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-          <button mat-button class="sidebar-button" routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'" placement="right" ngbTooltip="Home">
+          <button mat-button class="sidebar-button btn btn-primary" routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'" placement="right" ngbTooltip="Home">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">home</i>
@@ -32,7 +32,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'" placement="right" ngbTooltip="Dashboard">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'" placement="right" ngbTooltip="Dashboard">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">dashboard</i>
@@ -46,7 +46,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'" placement="right" ngbTooltip="Channels">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'" placement="right" ngbTooltip="Channels">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">web</i>
@@ -60,7 +60,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'" placement="right" ngbTooltip="Streams">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'" placement="right" ngbTooltip="Streams">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">ondemand_video</i>
@@ -74,7 +74,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'" placement="right" ngbTooltip="Videos">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'" placement="right" ngbTooltip="Videos">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">subscriptions</i>
@@ -88,7 +88,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'" placement="right" ngbTooltip="Clips">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'" placement="right" ngbTooltip="Clips">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">movie</i>
@@ -102,7 +102,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'" placement="right" ngbTooltip="Users">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'" placement="right" ngbTooltip="Users">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">group</i>
@@ -116,7 +116,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'" placement="right" ngbTooltip="Games">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'" placement="right" ngbTooltip="Games">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">games</i>
@@ -130,7 +130,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'" placement="right" ngbTooltip="Chat">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'" placement="right" ngbTooltip="Chat">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">chat</i>
@@ -144,7 +144,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'" placement="right" ngbTooltip="Bot">
+            <button mat-button class="sidebar-button btn btn-primary" routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'" placement="right" ngbTooltip="Bot">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">adb</i>
@@ -158,7 +158,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" *ngIf="!authService.signedIn()" routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'" placement="right" ngbTooltip="Sign in">
+            <button mat-button class="sidebar-button btn btn-primary" *ngIf="!authService.signedIn()" routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'" placement="right" ngbTooltip="Sign in">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">account_circle</i>
@@ -172,7 +172,7 @@
       </li>
       <li class="expanded">
         <div class="container sidebar-button-container">
-            <button mat-button class="sidebar-button" *ngIf="authService.signedIn()" (click)="logout()" routerLinkActive="active" [class.activated]="currentUrl == '/signout'" placement="right" ngbTooltip="Sign out">
+            <button mat-button class="sidebar-button btn btn-primary" *ngIf="authService.signedIn()" (click)="logout()" routerLinkActive="active" [class.activated]="currentUrl == '/signout'" placement="right" ngbTooltip="Sign out">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">exit_to_app</i>
