--- a/client/src/app/ui/sidebar/sidebar.component.scss
+++ b/client/src/app/ui/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
  * @Author: Nizars
  * @Date: 2018-06-02 23:40:37
  * @Last Modified by: Nizars
- * @Last Modified time: 2018-06-02 23:44:37
+ * @Last Modified time: 2018-06-09 08:02:49
  */
 
 /* ---------------------------------------------------
@@ -25,7 +25,7 @@
 }
 
 .sidebar-toggle-button {
-  background: #333333;
+  // background: #333333;
 }
 
 // EXPANDED
