--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div id="page-container">
 
   <!-- Sidebar Holder -->
@@ -9,7 +11,6 @@
 
   <!-- Page Content Holder -->
   <div id="page-column" class="column">
-    <div class="page-header">Streamer Dashboard</div>
     <div class="page-body">
       <router-outlet></router-outlet>
       <!-- Footer Holder -->
