--- a/client/src/app/ui/sidebar/sidebar.component.scss
+++ b/client/src/app/ui/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
  * @Author: Nizars
  * @Date: 2018-06-02 23:40:37
  * @Last Modified by: Nizars
- * @Last Modified time: 2018-06-09 08:02:49
+ * @Last Modified time: 2018-06-09 09:51:59
  */
 
 /* ---------------------------------------------------
@@ -25,7 +25,9 @@
 }
 
 .sidebar-toggle-button {
-  // background: #333333;
+  background: #333333;
+  min-height: 70px;
+  max-height: 70px;
 }
 
 // EXPANDED
@@ -34,6 +36,10 @@
   max-width: 250px;
 }
 
+.sidebar-button {
+  min-height: 70px;
+  max-height: 70px;
+}
 
 // LIST
 // COLLAPSED
