--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,9 +7,8 @@
 body {
   margin: 0;
   background-color: rgb(243, 243, 243);
-  height: 100vh;
+  // height: 100vh;
 }
-
 .background {
   position: absolute;
   top     : 0;
