--- a/client/src/app/ui/navbar/navbar.component.html
+++ b/client/src/app/ui/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
     <a class="navbar-brand" href="#">Top navbar</a>
 
