Fixed Sidebar button border radius

--- a/client/src/app/ui/sidebar/sidebar.component.html
+++ b/client/src/app/ui/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     <ul class="list-unstyled components">
       <li class="expanded">
         <div class="container sidebar-button-container">
-          <button mat-button class="sidebar-button sidebar-toggle-button btn btn-primary" id="sidebar-collapse" placement="right" ngbTooltip="Toggle side bar">
+          <button mat-button class="sidebar-button btn btn-primary" id="sidebar-collapse" placement="right" ngbTooltip="Toggle side bar">
             <div class="row sidebar-button-row">
               <div class="col sidebar-icon-col">
                 <i class="sidebar-button-icon material-icons">menu</i>
